[package]
name = "roll"
version = "1.1.0"
edition = "2024"

[features]
wasm = ["wasm-bindgen", "getrandom"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.53", features = ["cargo"] }
rand = "0.9.2"
# Only need getrandom if we are building for WASM, in which case we must specify it having the wasm_js feature
getrandom = { version = "0.3.4", features = ["wasm_js"], optional = true }
wasm-bindgen = {version = "0.2.106", optional = true}
